@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3173 utf-8
+personal_ws-1.1 en 3175 utf-8
 AAC
 AAS
 ABI
@@ -969,6 +969,7 @@ RDLCK
 RDNT
 RDWR
 README
+REALPATH
 REDi
 REFREPO
 REPLBATT
@@ -2160,6 +2161,7 @@ libipmimonitoring
 libltdl
 liblzma
 libmodbus
+libname
 libneon
 libnetsnmp
 libnss
